--- a/semester_2/physics_1.tex
+++ b/semester_2/physics_1.tex
@@ -1,4 +1,4 @@
-\documentclass[14pt]{extarticle}
+\documentclass[10pt]{extarticle}
 \title{Physics 1 Notes}
 \author{Giacomo Ellero}
 
@@ -890,8 +890,7 @@ Moreover the coefficient $\mu$ changes if the mass is moving or not: if the mass
     \draw[black] (0,0) -- (5,0) node[midway, below]{$b$};
     \draw[black] (0,0) -- (0,3) node[midway, left]{$h$};
 
-    % \draw[blue, rotate=60] (5,1) rectangle (7,2) node[midway]{$m$};
-    % TODO: finish the drawing
+    \draw[blue, rotate=59] (2.57,-2) rectangle (4.07,-0.5) node[midway]{$m$};
   \end{tikzpicture}
 \end{center}
 
@@ -931,5 +930,23 @@ We call $\theta_c$ ($\theta$ critical) the angle at which the body starts moving
 \end{align*}
 
 This is very important because in this way we have a way to measure the coefficient of friction.
+
+\section{Class of 19/02/2024 - Exercises}
+
+We derived, by solving some exercises, the following relations:
+
+$$
+  \frac{\sin \theta_1}{\sin \theta_2} = \frac{v_1}{v_2}
+$$
+
+and
+
+$$
+  \theta_1 = \theta_2
+$$
+
+These are relations that describe the refraction and reflection of light but it's interesting to see how they can be derived from the fact that light travels the fastest path.
+
+
 
 \end{document}
